--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -1,6 +1,5 @@
-/* General Styles */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
