--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -8,9 +8,9 @@ body {
 
 /* Header */
 header {
-    background: #153c66;
+    background: #002244;
     color: white;
-    padding: 1rem;
+    padding: 0,5rem;
     text-align: center;
     font-size: 1rem;
     font-weight:normal;
@@ -124,12 +124,12 @@ footer {
     background: #002244;
     color: white;
     text-align: center;
-    padding: 10px;
-    margin-top: 20px;
+    padding: 1px;
+    margin-top: 5px;
 }
 
 footer p {
-    margin: 5px 0;
+    margin: 1px;
 }
 
 footer span {
