place.css added

--- a/week03/styles/place.css
+++ b/week03/styles/place.css
@@ -1,17 +1,16 @@
 /* Global Styles */
 :root {
-    --primary-color: #1caf77; /* Green */
-    --secondary-color: #1caf77; /* light Black */
-    --background-color: #ffffff; /* White */ 
+    --primary-color: #1caf77; 
+    --secondary-color: #1caf77; 
+    --background-color: #ffffff; 
     --text-color: 00000;
 
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Merriweather', serif;
     margin: 0;
     padding: 0;
-    color: var(--text-color);
     background-color: var(--background-color);
 }
 
