--- a/project/styles/local-community.css
+++ b/project/styles/local-community.css
@@ -147,7 +147,7 @@
     padding: 2rem;
     border-radius: 10px;
     text-align: center;
-    max-width: 50% 90%;
+    max-width: 100%;
     align-content: center;
   }
   
